--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="./style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
-    <h1>Hello World!</h1>
+
+<header class="header">
+    <a href="#home" class="logo">Tebogo
+        <span>Selamolela</span></a>
+
+        <i class='bx bx-menu' id="menu-icon"></i>
+
+    <nav class="navbar">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#experience">Experience</a>
+        <a href="#contact">Get in Touch</a>
+    </nav>
+</header>
+
 </body>
 </html>
