Adding the bio and styling

--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -11,8 +11,8 @@
 <body>
 
 <header class="header">
-    <a href="#home" class="logo">Tebogo
-        <span>Selamolela</span></a>
+    <a href="#home" class="logo">Full-Stack
+        <span>Developer</span></a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
@@ -22,7 +22,37 @@
         <a href="#experience">Experience</a>
         <a href="#contact">Get in Touch</a>
     </nav>
+
+    
 </header>
 
+    
+<section class="home" id="home">
+    <div class="home-content">
+        <h1>Hi It's<span>Tebogo</span></h1>
+        <h3 class="text-animation"> I'm a <span>Full Stack Developer</span></h3>
+        <p>As a dedicated full-stack developer with 3 years of experience,
+         I specialize in building dynamic, scalable web applications that align with business goals and enhance user satisfaction. My skill set spans cutting-edge front-end frameworks like React and Next.js, paired with robust back-end technologies including Node.js, MySQL, PostgreSQL, and MongoDB. I am driven
+         by a passion for innovation and a commitment to delivering solutions that combine functionality
+        with seamless user experiences.</p>
+
+        <div class="social-icons">
+            <a href=""><i class="bx bxl-linkedin"></i></a>
+            <a href=""><i class="bx bxl-github"></i></a>
+            <a href=""><i class="bx bxl-twitter"></i></a>
+        </div>
+
+        <div class="btn-group">
+            <a href="#" class="btn"></a>
+            <a href="#contact"></a>
+        </div>
+
+        <div class="home-img">
+            <img src="logo.JPG" alt="">
+        </div>
+</section>
+
 </body>
+
+
 </html>
