--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar">
         <a href="#home">Home</a>
-        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
         <a href="#experience">Experience</a>
         <a href="#contact">Get in Touch</a>
     </nav>
@@ -43,13 +43,46 @@
         </div>
 
         <div class="btn-group">
-            <a href="#" class="btn"></a>
-            <a href="#contact"></a>
+            <a href="#" class="btn">Contact me 😃 </a>
         </div>
 
-        <div class="home-img">
+        <!-- <div class="home-img">
             <img src="logo.JPG" alt="">
+        </div> -->
+</section>
+
+<section class="experience" id="experience">
+    <h2 class="heading">Experience</h2>
+    <div class="timeline-items">
+        <div class="timeline-item">
+            <div class="timeline-dot"></div>
+                <div class="timeline-date">2021 - 2024</div>
+                <div class="timeline-content">
+                    <h3>Junior Software Developer - Zero1 Solutions PTY LTD</h3>
+                    <p>
+                        At Zero1 Solutions PTY LTD, I worked on the MTN Operational Management system
+                        and Database system, where I: Tested and developed solutions to resolve client issues,
+                        Collaborated with teams for seamless integration, Provided exceptional customer support
+                        and Developed efficient database queries and stored procedures. .
+                    </p>
+                </div>
+            
         </div>
+        <div class="timeline-item">
+            <div class="timeline-dot"></div>
+                <div class="timeline-date">2021 - 2024</div>
+                <div class="timeline-content">
+                    <h3>Junior Software Developer - Zero1 Solutions PTY LTD</h3>
+                    <p>
+                        At Zero1 Solutions PTY LTD, I worked on the MTN Operational Management system
+                        and Database system, where I: Tested and developed solutions to resolve client issues,
+                        Collaborated with teams for seamless integration, Provided exceptional customer support
+                        and Developed efficient database queries and stored procedures. .
+                    </p>
+                </div>
+        
+        </div>
+    </div>
 </section>
 
 </body>
