--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -18,8 +18,8 @@
 
     <nav class="navbar">
         <a href="#home">Home</a>
-        <a href="#skills">Skills</a>
         <a href="#experience">Experience</a>
+        <a href="#skills">Skills</a>
         <a href="#contact">Get in Touch</a>
     </nav>
 
@@ -80,10 +80,78 @@
                         and Developed efficient database queries and stored procedures. .
                     </p>
                 </div>
-        
         </div>
     </div>
 </section>
+
+<section class="skills" id="skills">
+    <h2 class="heading">Skills</h2>
+    <div class="skills-container">
+      <div class="skill-box">
+        <div class="skill-info">
+            <h4>HTML</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+      <div class="skill-box">
+        <div class="skill-info">
+            <h4>HTML</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </div>
+</section>
+
+
+<section class="contact" id="contact">
+    <h2 class="heading">Get in <span>Touch</span></h2>
+    <form action="">
+        <div class="input-group">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email">
+            </div>
+            <div class="input-box">
+                <input type="number" placeholder="Phone Number">
+                <input type="text" placeholder="Subject">
+            </div>
+        </div>
+
+        <div class="input-group-2">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="btn">
+        </div>
+    </form>
+</section>
+
+<footer class="footer">
+    <div class="social">
+        <a href=""><i class="bx bxl-linkedin"></i></a>
+            <a href=""><i class="bx bxl-github"></i></a>
+            <a href=""><i class="bx bxl-twitter"></i></a>
+    </div>
+
+    <ul class="list">
+        <li>
+            <a href="#">Home</a>
+        </li>
+        <li>
+            <a href="#">Skills</a>
+        </li>
+        <li>
+            <a href="#">Experience</a>
+        </li>
+        <li>
+            <a href="#">Get in Touch</a>
+        </li>
+    </ul>
+
+    <p class="copyright">
+        @ Tebogo Selamolela | All Rights Reserved
+    </p>
+</footer>
 
 </body>
 
