Fixing the home img position

--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -45,10 +45,10 @@
         <div class="btn-group">
             <a href="#" class="btn">Contact me 😃 </a>
         </div>
-
-        <!-- <div class="home-img">
+    </div>
+        <div class="home-img">
             <img src="logo.JPG" alt="">
-        </div> -->
+        </div>
 </section>
 
 <section class="experience" id="experience">
