--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -56,14 +56,15 @@
     <div class="timeline-items">
         <div class="timeline-item">
             <div class="timeline-dot"></div>
-                <div class="timeline-date">2021 - 2024</div>
+                <div class="timeline-date">FEB 2019 - JAN 2021</div>
                 <div class="timeline-content">
-                    <h3>Junior Software Developer - Zero1 Solutions PTY LTD</h3>
+                    <h3>Software Developer - <span>The Coding Ground</span></h3>
                     <p>
-                        At Zero1 Solutions PTY LTD, I worked on the MTN Operational Management system
-                        and Database system, where I: Tested and developed solutions to resolve client issues,
-                        Collaborated with teams for seamless integration, Provided exceptional customer support
-                        and Developed efficient database queries and stored procedures. .
+                        I successfully completed an intensive Learnership program at The Coding Ground, 
+                        where I acquired a comprehensive foundation in full-stack development. This transformative
+                        experience equipped me with expertise in JavaScript and modern front-end technologies, 
+                        enabling me to design and develop scalable, customer-centric web applications and websites.
+                        Through hands-on training and real-world projects.
                     </p>
                 </div>
             
@@ -72,7 +73,7 @@
             <div class="timeline-dot"></div>
                 <div class="timeline-date">2021 - 2024</div>
                 <div class="timeline-content">
-                    <h3>Junior Software Developer - Zero1 Solutions PTY LTD</h3>
+                    <h3>Junior Software Developer - <span>Zero1 Solutions PTY LTD</span></h3>
                     <p>
                         At Zero1 Solutions PTY LTD, I worked on the MTN Operational Management system
                         and Database system, where I: Tested and developed solutions to resolve client issues,
@@ -89,16 +90,26 @@
     <div class="skills-container">
       <div class="skill-box">
         <div class="skill-info">
-            <h4>HTML</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h4>HTML and CSS</h4>
+            <p>Completed an extensive HTML and CSS course, gaining in-depth knowledge of web design principles, responsive layout creation, and styling techniques to build visually appealing and functional websites</p>
         </div>
       </div>
       <div class="skill-box">
         <div class="skill-info">
-            <h4>HTML</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h4>Javascript</h4>
+            <p>Completed a comprehensive course on JavaScript and Algorithms, acquiring advanced skills in JavaScript programming, problem-solving techniques, and algorithmic design to develop efficient and scalable solutions.</p>
+        </div>
+      </div>
+      <div class="skill-box">
+        <div class="skill-info">
+            <h4>MERN</h4>
+            <p>Proficient in the MERN stack, with expertise in building dynamic, full-stack web applications using MongoDB, Express.js, React, and Node.js. Skilled in database management, RESTful API development, responsive UI design, and implementing efficient backend logic.</p>
+        </div>
+      </div>
+      <div class="skill-box">
+        <div class="skill-info">
+            <h4>Quality Assurance</h4>
+            <p>Proficient in Quality Assurance practices, including manual and automated testing, bug tracking, and test case creation. Skilled in ensuring software quality through thorough analysis, performance testing, and adherence to industry standards for reliable and efficient application delivery.</p>
         </div>
       </div>
     </div>
