Added the add task function to the app

--- a/To_Do_List_App/index.html
+++ b/To_Do_List_App/index.html
@@ -14,14 +14,14 @@
             <button class="add-list">Add</button>
         </div>
         <div class="tasks">
-            <div class="item" >
+            <!-- <div class="item" >
                 <p>New Item Here</p>
                 <div class="item-btn">
-                    <!-- ----- Please come back to import the link for the icons ----- -->
+                    ----- Please come back to import the link for the icons -----
                     <i class="fa-solid fa-pen-to-square"><button>Edit</button></i>
                     <i class="fa-solid fa-xmark"><button>Remove</button></i>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
