--- a/To_Do_List_App/index.html
+++ b/To_Do_List_App/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <title>To Do List App</title>
 </head>
 <body>
@@ -14,14 +15,13 @@
             <button class="add-list">Add</button>
         </div>
         <div class="tasks">
-            <!-- <div class="item" >
+            <div class="item" >
                 <p>New Item Here</p>
                 <div class="item-btn">
-                    ----- Please come back to import the link for the icons -----
-                    <i class="fa-solid fa-pen-to-square"><button>Edit</button></i>
-                    <i class="fa-solid fa-xmark"><button>Remove</button></i>
+                    <i class="fa-regular fa-pen-to-square"></i>
+                    <i class="fa-solid fa-xmark"></i>
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
 
